--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-loader-spinner": "^6.0.0-0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-spinners": "^0.11.0",
     "react-toastify": "^9.0.1",
     "typewriter-effect": "^2.18.2",
