--- a/package.json
+++ b/package.json
@@ -3,22 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.6.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "firebase": "^9.7.0",
+    "material-table": "^2.0.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^6.0.0-0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.11.0",
+    "react-table": "^7.7.0",
     "react-toastify": "^9.0.1",
     "typewriter-effect": "^2.18.2",
     "typical": "^7.1.1",
