--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
     "firebase": "^9.7.0",
     "material-table": "^2.0.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
+    "react-chartjs-2": "^4.1.0",
+    "react-countup": "^6.2.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.30.0",
@@ -27,6 +30,7 @@
     "react-spinners": "^0.11.0",
     "react-table": "^7.7.0",
     "react-toastify": "^9.0.1",
+    "recharts": "^2.1.9",
     "typewriter-effect": "^2.18.2",
     "typical": "^7.1.1",
     "web-vitals": "^2.1.4"
